# ppi-chi-nettest

./: .env.cmake  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  rpc.h  rpc_thallium.h  test_networks.cc
ci/: load_deps.sh
include/test_networks/: chimaera_types.h  config_server.h  config_server_default.h  rpc.h  rpc_thallium.h  serialize_defn.h
src/: chi_net_bench.cc  chi_net_find.cc  chi_net_ping.cc  fullping.cc  server_config.cc  start_chi_net_test.cc  stop_chi_net_test.cc  test_networks.cc
test/chi_nettest/chi_net_bench/: pkg.py
test/chi_nettest/chi_nettest/: README.md  pkg.py
test/jarvis_chi_nettest/jarvis_chi_nettest/chi_net_bench/: pkg.py
test/pipelines/: bench_net.yaml
